<resources>
    <string name="app_name">Isibaya Academy</string>
    <string name="continue_">Continue</string>

    <string name="select_grade">Select Grade</string>
    <string name="grade_3"> 3 </string>
    <string name="grade_4"> 4 </string>
    <string name="grade_5"> 5 </string>
    <string name="grade_6"> 6 </string>
    <string name="grade_7"> 7 </string>

    <string name="select_subject">Select Subject</string>
    <string name="eng_sub">English</string>
    <string name="vpa_sub">VPA</string>
    <string name="nde_sub">Ndebele</string>
    <string name="snt_sub"><![CDATA[Science & Technology]]></string>
    <string name="ict_sub">ICT</string>
    <string name="her_sub">Heritage</string>
    <string name="pe_sub">PE</string>
    <string name="agri_sub">Agriculture</string>
    <string name="far_sub">Fareme</string>

    <string name="text_audio_notes"><![CDATA[Text & Audio Notes]]></string>
    <string name="audio_notes">Audio Notes</string>
    <string name="text_notes">Text Notes</string>
    <string name="profile_menu_text">Profile</string>
    <string name="progress">Progress</string>
    <string name="settings">Settings</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="exit">Exit</string>
</resources>