<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SelectGrade">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/select_grade"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryDark"
                android:textAlignment="center"
                />

            <RadioGroup
                android:id="@+id/select_grade_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:gravity="clip_vertical"
                >


                    <RadioButton
                        android:id="@+id/grade_3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="4dp"
                        android:buttonTint="@color/colorPrimaryDark"
                        android:text="@string/grade_3"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="24sp"
                        android:textStyle="bold" />



                <RadioButton
                    android:id="@+id/grade_4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:text="@string/grade_4"
                    android:textColor="@color/colorPrimaryDark"
                    android:buttonTint="@color/colorPrimaryDark"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/grade_5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:text="@string/grade_5"
                    android:textColor="@color/colorPrimaryDark"
                    android:buttonTint="@color/colorPrimaryDark"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/grade_6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:text="@string/grade_6"
                    android:textColor="@color/colorPrimaryDark"
                    android:buttonTint="@color/colorPrimaryDark"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/grade_7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:text="@string/grade_7"
                    android:textColor="@color/colorPrimaryDark"
                    android:buttonTint="@color/colorPrimaryDark"
                    android:textSize="24sp"
                    android:textStyle="bold" />
            </RadioGroup>
        </LinearLayout>
    </ScrollView>
</FrameLayout>